<resources>
    <string name="app_name">My Application</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">My Application</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>
    <string name="comming_soon">Comming soon</string>
    <string name="action_exit">Exit</string>
    <string name="action_opengps">Open GPS</string>
    <string name="action_send_saved">Send Saved Message</string>
    <string name="exit_while_repeat">再按一次退出</string>
    <string name="saved_message">message</string>
    <string name="saved_message2">message2</string>
    <string name="action_open_url">Open Baidu</string>
    <string name="action_pick_contact">Pick Contact</string>
    <string name="action_take_photo">Take a photo</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="send_to">Send To</string>
    <string name="action_share">share</string>
    <string name="more_apps">More Apps</string>
    <string name="create_shortcut">Create Shortcut</string>
</resources>
